# textx-lang-iri

./: CHANGELOG.md  README.md  pyproject.toml
src/textxirirefs/: __init__.py  exceptions.py  iri.py  iri.tx  scripts.py  uri.py  uri.tx
tests/: test.py
